[BUG95] Security issue in listHistoryForUser